# readyset

./: Cargo.toml  deny.toml
.buildkite/: pipeline.readyset-mcp.yml
.cargo/: config.toml
database-utils/src/: error.rs
dataflow-expression/tests/: postgres_oracle.rs
dataflow-state/: Cargo.toml
dataflow-state/examples/: make_serialized_keys.rs  make_serialized_meta.rs  make_serialized_row.rs
dataflow-state/src/: lib.rs  memory_state.rs
dataflow-state/src/persistent_state/: format_version.rs  mod.rs
dataflow-state/tests/: serialized-keys.bincode  serialized-meta.json  serialized-row.bincode
logictests/: distinct_sum_count_range_param.test
nom-sql/src/: lib.rs  mcp_token.rs  parser.rs  show.rs
readyset/: Cargo.toml
readyset-adapter/: Cargo.toml
readyset-adapter/src/: backend.rs  lib.rs  mcp_http.rs
readyset-client/: Cargo.toml
readyset-client/src/consensus/: mcp_tokens.rs  mod.rs
readyset-client/src/metrics/: mod.rs
readyset-data/src/: lib.rs  serde.rs
readyset-dataflow/src/: processing.rs
readyset-dataflow/src/domain/: mod.rs  remapped_keys.rs
readyset-dataflow/src/ops/: join.rs  paginate.rs
readyset-e2e-tests/: Cargo.toml
readyset-e2e-tests/tests/: cache_mode.rs  mcp.rs  online_index_build.rs  shallow.rs
readyset-errors/src/: lib.rs
readyset-logictest/src/: from_query_log.rs
readyset-mcp/: Cargo.toml
readyset-mcp/src/: connection.rs  lib.rs  main.rs  server.rs
readyset-mir/src/: node.rs
readyset-psql/src/: error.rs
readyset-server/src/: integration.rs
readyset-server/src/controller/: inner.rs  mod.rs  state.rs
readyset-server/src/controller/sql/mir/: mod.rs
readyset-sql-parsing/src/: lib.rs
readyset-sql-parsing/tests/: hint_parsing.rs  mcp_token.rs
readyset-sql-passes/src/: anonymize.rs  lateral_join.rs  lib.rs  normalize_topk_with_aggregate.rs
readyset-sql-passes/src/adapter_rewrites/: mod.rs
readyset-sql/src/analysis/: visit.rs  visit_mut.rs
readyset-sql/src/ast/: insert.rs  mcp_token.rs  mod.rs  query.rs  show.rs  table.rs
readyset/src/: lib.rs
replicators/src/: db_util.rs
replicators/src/postgres_connector/: connector.rs  ddl_replication.rs
replicators/tests/: tests.rs
