[package]
name = "readyset-mcp"
version = "0.1.0"
publish = false
authors = ["Readyset Technology, Inc. <info@readyset.io>"]
edition = "2024"

description = "MCP (Model Context Protocol) server for Readyset"

[[bin]]
name = "readyset-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
mysql_async = { workspace = true }
native-tls = { workspace = true }
pem = { workspace = true }
postgres-native-tls = { workspace = true }
rmcp = { version = "1.4", features = ["server", "transport-io"] }
schemars = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
